Fix layout issues with insights

--- a/webportal/src/app/processmining/insight/insight.component.scss
+++ b/webportal/src/app/processmining/insight/insight.component.scss
@@ -9,3 +9,11 @@
 .green {
     color: #64dd17;
 }
+
+h1 {
+    font-size: 16px;
+}
+
+h2 {
+    font-size: 14px;
+}
